<resources>
    <string name="app_name">Computadores</string>
    <string name="action_settings">Settings</string>
    <string name="crear_computadores">Crear Computadores</string>
    <string name="ram">Ram (Gb)</string>
    <string name="marca">Marca</string>
    <string name="color">Color</string>
    <string name="tipo">Tipo</string>
    <string name="so">Sistema Operativo</string>
    <string name="guardar">GUARDAR</string>
    <string name="limpiar">LIMPIAR</string>
    <string name="hp">HP</string>
    <string name="dell">Dell</string>
    <string name="acer">Acer</string>
    <string name="samsung">Samsung</string>
    <string name="negro">Negro</string>
    <string name="blanco">Blanco</string>
    <string name="azul">Azul</string>
    <string name="gris">Gris</string>
    <string name="windows">Windows</string>
    <string name="linux">Linux</string>
    <string name="escritorio">Escritorio</string>
    <string name="laptop">Laptop</string>
    <string name="notebook">Notebook</string>
    <string name="tableta">Tableta</string>
    <string-array name="op_marca">
        <item>@string/acer</item>
        <item>@string/dell</item>
        <item>@string/hp</item>
        <item>@string/samsung</item>
    </string-array>
    <string-array name="op_color">
        <item>@string/negro</item>
        <item>@string/blanco</item>
        <item>@string/azul</item>
        <item>@string/gris</item>
    </string-array>
    <string-array name="op_tipo">
        <item>@string/escritorio</item>
        <item>@string/notebook</item>
        <item>@string/laptop</item>
        <item>@string/tableta</item>
    </string-array>
    <string-array name="op_so">
        <item>@string/windows</item>
        <item>@string/linux</item>
    </string-array>
    <string name="mensaje_guardado_exitoso">¡Computador guardado Exitosamente!</string>
    <string name="positivo">Si</string>
    <string name="negativo">No</string>
    <string name="pregunta_eliminacion">¿Está seguro que desea eliminar a este Computador?</string>
    <string name="informacion">Descripcion</string>
    <string name="eliminar">Eliminar</string>
    <string name="error_ram">Complete el campo vacio</string>

</resources>
